# pdf-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile.example  README.md  alembic.ini  clamav.Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  streamlit.Dockerfile
.claude/: launch.json
.streamlit/: config.toml
docs/: architecture.md  configuration.md  importing.md  jenkins.md  oss-review.md  refactor-gap.md  refactor-plan.md  runbook.md  security.md  service-contract.md
docs/adr/: 0001-service-owned-ingestion.md  0002-realtime-semantics.md  0003-processing-stack.md  0004-publication-and-terminal-cleanup-gates.md
docs/contracts/: chunks-qdrant.md  intake-api.md
docs/migration/: historical-import.md  jenkins-retirement.md
interactive-docs/: README.md  package-lock.json  package.json
interactive-docs/.openai/: hosting.json
interactive-docs/app/: globals.css  layout.tsx  page.tsx  retirement-notice.tsx
interactive-docs/app/_docs/: DocsShell.tsx  components.tsx  navigation.ts  reference-content.tsx  role-content.tsx
interactive-docs/tests/: rendered-html.test.mjs
migrations/: env.py
migrations/versions/: 0001_initial_catalog.py  0001_semantic_intake.py  0001_target_bridge.py  0002_collection_language_partitioning.py  0002_collection_partitioning.py
pdf_bridge/: __init__.py  app.py
pdf_bridge/contracts/: __init__.py  job_contracts.py  schemas.py
pdf_bridge/controllers/: __init__.py  admin_cli.py  api.py  job_cli.py  jobs.py  web.py
pdf_bridge/core/: __init__.py  config.py  logging_config.py
pdf_bridge/http/: __init__.py  middleware.py  problems.py  security.py
pdf_bridge/managers/: __init__.py  batch.py  catalog.py  document.py  health.py  importing.py  job_client.py  search.py  web.py  worker.py
pdf_bridge/persistence/: __init__.py  db.py  models.py
pdf_bridge/presentation/: __init__.py  api_serializers.py  theme.py  view_models.py
pdf_bridge/services/: __init__.py  analysis.py  artifacts.py  bm25.py  candidates.py  catalog.py  chunking.py  classification.py  document.py  embeddings.py  errors.py  extraction.py  extraction_child.py  filenames.py  fingerprint.py  health.py  historical_import.py  intake.py  job_batch.py  job_http.py  job_staging.py  lifecycle.py  local_embeddings.py  markdown_chunking.py  markdown_formatter.py  preparation.py  profiles.py  reingestion.py  scanner.py  search.py  storage.py  vector_index.py  web_page.py
pdf_bridge/static/: app.css  app.js  upload.js
pdf_bridge/templates/: base.html  collection_detail.html  document_detail.html  library.html  queue.html  upload.html
pdf_bridge/templates/macros/: ui.html
pdf_bridge/templates/partials/: flash_messages.html
src/pdf_bridge/: admin_cli.py  api.py  app.py  config.py  db.py  job_cli.py  jobs.py  lifecycle.py  logging_config.py  middleware.py  models.py  problems.py  scanner.py  schemas.py  search.py  security.py  theme.py  view_models.py  web.py
src/pdf_bridge/static/: app.css  app.js  theme.js  upload.js
src/pdf_bridge/templates/: base.html  (+7 more)
streamlit_app/: README.md  app.py  bridge_client.py  bridge_ui.py
streamlit_app/tests/: fake_bridge.py  test_app_smoke.py  test_bridge_client.py  test_operator_workflows.py
streamlit_app/views/: __init__.py  library.py  overview.py  search.py  upload.py  workspace.py
tests/: conftest.py  test_analysis_orchestration.py  test_analysis_units.py  test_api_v2_schemas.py  test_api_v2_serialization_manager.py  test_api_v2_transport_manager.py  test_app_lifecycle.py  test_architecture.py  test_artifact_history.py  test_browser.py  test_candidate_selection.py  test_clamav_integration.py  test_cli.py  test_collection_foundation.py  test_collection_web.py  test_collection_workflows.py  test_evaluation_corpus.py  test_extraction_target.py  test_health.py  test_health_maintenance.py  test_http_security_target.py  test_index_epoch_safety.py  test_intake_freshness.py  test_local_embeddings_target.py  test_logging.py  test_markdown_chunking_target.py  test_markdown_formatter.py  test_middleware.py  test_ops_configuration.py  test_pipeline_flow.py  test_preparation_target.py  test_problem_contract.py  test_provider_boundaries.py  test_reingestion.py  test_reliability_regressions.py  test_scanner.py  test_search_failures.py  test_security_and_import.py  test_semantic_intake_safety.py  test_target_config_profiles.py  (+7 more)
tests/integration/: test_qdrant_rbac.py
tests/target_classification/: test_classification.py
tests/target_lifecycle/: conftest.py  test_intake.py
tests/target_persistence/: test_models.py
tests/target_worker/: conftest.py  test_worker.py
(+7 files in other folders)
