[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-bridge"
version = "0.1.0"
description = "A durable, security-conscious semantic intake and PDF replacement service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.18.5",
  "fastembed==0.8.0",
  "httpx==0.28.1",
  "lingua-language-detector==2.2.0",
  "litestar[cryptography]==2.24.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pypdf==6.14.2",
  "qdrant-client==1.18.0",
  "rapidfuzz==3.14.5",
  "sentence-transformers==5.5.0",
  "sqlalchemy==2.0.51",
  "typer==0.26.8",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-cov==6.3.0",
  "respx==0.23.1",
  "ruff==0.15.21",
]
streamlit = [
  "streamlit==1.59.2",
]

[project.scripts]
pdf-bridge = "pdf_bridge.controllers.admin_cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests", "streamlit_app/tests"]
addopts = "-ra --strict-markers"
markers = [
  "clamav: requires a live clamd service",
  "qdrant_rbac: opt-in live least-privilege gate using disposable Qdrant collections",
]
filterwarnings = [
  # Tests must use testserver.local; the bare test host breaks cookie handling.
  "error:The base_url.*might cause issues:UserWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
# The Streamlit workspace's flat modules resolve from streamlit_app/ at runtime.
known-first-party = ["pdf_bridge", "bridge_client", "bridge_ui", "views"]
